# suggestions-v4

./: .gitignore  README.md  Test Results - .html  app.py  bot.py  docker-compose-dev.yml  main.py  make_migrations.sh  migrate.sh  piccolo_conf.py  piccolo_conf_test.py  pyproject.toml  pytest.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: push.yml
bot/: __init__.py  bot.py  constants.py  exceptions.py  hooks.py  infisical.py  localisation.py  piccolo_app.py
bot/extensions/: blocklist.py  clear.py  configure.py  configure_guild.py  configure_user.py  generic.py  notes.py  queue.py  resolve.py  setup.py  suggest.py  suggest_cmd.py  support_guild.py  view_voters.py
bot/locales/: README.md  convert.py  da.json  de.json  en_GB.json  en_US.json  fr.json  pt_BR.json  tr.json
bot/menus/: __init__.py  guild_configuration_menu.py  suggestion_menu.py  suggestions_queue.py  suggestions_queue_viewer.py  user_configuration_menu.py
bot/mixins/: tables.py
bot/overrides/: __init__.py  lightbulb_client.py
bot/piccolo_migrations/: bot_2025_05_29t22_37_04_822536.py  bot_2025_06_01t22_21_42_974478.py  bot_2025_11_12t13_02_48_024892.py  bot_2026_01_13t22_10_18_780780.py  bot_2026_03_22t14_02_39_128148.py  bot_2026_03_23t12_27_51_250326.py  bot_2026_03_30t18_28_34_825372.py  bot_2026_04_04t13_02_55_854146.py  bot_2026_05_11t15_21_02_223818.py  bot_2026_05_11t15_38_25_565390.py  bot_2026_05_11t20_09_57_561142.py  bot_2026_06_14t14_15_25_417719.py  bot_2026_06_14t14_58_13_421720.py  bot_2026_07_05t15_20_38_269576.py  bot_2026_07_09t18_15_06_707695.py
bot/tables/: __init__.py  command_invoke.py  error.py  guild_config.py  internal_error.py  message_addon.py  premium_guild_config.py  queued_suggestion.py  suggestion.py  suggestions_vote.py  user_config.py
bot/tasks/: store_guilds_in_redis.py
bot/utils/: __init__.py  cv2.py  embeds.py  errors.py  id.py  interaction_handler.py  otel.py  queue_paginator.py  r2.py  users.py  voter_paginator.py
docker/bot/: Dockerfile  entrypoint.sh
docker/saq/: Dockerfile  entrypoint.sh
docker/web/: Dockerfile  entrypoint.sh
migrations/: README.md  build_related_suggestions.py  ensure_configs_exist.py  migrate_queued_suggestions.py  migrate_suggestions.py  migrate_votes.py  objects.py
shared/: __init__.py  piccolo_app.py
shared/piccolo_migrations/: shared_2025_11_12t13_03_11_830349.py  shared_2026_01_04t18_10_04_484784.py  shared_2026_01_13t19_17_05_160645.py  shared_2026_01_13t21_01_18_233818.py  shared_2026_01_13t21_06_59_200743.py  shared_2026_01_13t22_10_22_322868.py  shared_2026_01_13t22_17_12_423532.py  shared_2026_02_03t20_45_26_984587.py  shared_2026_02_09t21_43_05_611910.py  shared_2026_02_09t21_48_57_675317.py  shared_2026_02_09t22_45_44_478598.py  shared_2026_02_09t22_46_35_853737.py  shared_2026_02_14t14_41_19_193023.py  shared_2026_02_14t14_57_48_866655.py  shared_2026_02_14t14_58_22_164668.py  shared_2026_02_14t15_26_49_711294.py  shared_2026_02_23t22_21_35_392122.py  (+14 more)
tests/: README.md  conftest.py  test_bot.py  test_di_factories.py  test_localisations.py  test_t_error.py  test_t_guild_config.py  test_t_user_config.py  test_u_ids.py
web/: admin_portal.py  constants.py  di.py  endpoints.py  exception_handlers.py  filters.py  piccolo_app.py
(+118 files in other folders)
