[project]
name = "suggestions-version-4"
version = "4.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore>=2.22.0",
    "fastnanoid>=0.4.1",
    "freezegun>=1.5.2",
    "function-cooldowns>=2.2.0",
    "hikari-lightbulb>=3.0.0a25",
    "hikari[speedups]>=2.3.3",
    "infisicalsdk>=1.0.8",
    "logoo>=1.5.1",
    "orjson>=3.10.18",
    "piccolo[all,postgres]>=1.26.0",
    "python-dotenv>=1.1.0",
    "redis[hiredis]>=6.2.0",
    "skelmis-commons>=1.6.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fakeredis>=2.27.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
