[project]
name = "suggestions-version-4"
version = "4.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore>=3.1.0",
    "arrow>=1.4.0",
    "fastnanoid>=0.4.3",
    "function-cooldowns>=2.2.0",
    "hikari-lightbulb>=3.2.3",
    #    "hikari[speedups]>=2.5.0",
    "hikari[speedups]",
    "httpx-oauth>=0.16.1",
    "httpx-retries>=0.4.5",
    "humanize>=4.15.0",
    "infisicalsdk>=1.0.8",
    "litestar-saq[otel]>=0.6.3",
    "litestar[cryptography,opentelemetry]>=2.19.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "orjson>=3.11.5",
    "piccolo-admin>=1.12.0",
    "piccolo-api[authenticator,pynacl]>=1.7.0",
    "piccolo[all,postgres]>=1.26.0",
    "python-dotenv>=1.1.0",
    "redis[hiredis]>=7.1.0",
    "saq[hiredis,web]>=0.26.0",
    "skelmis-commons>=1.6.1",
    "stripe>=14.2.0",
    "tenacity>=9.1.2",
    "tracer>=2.0.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "fakeredis>=2.27.0",
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 90

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.uv.sources]
hikari = { git = "https://github.com/mplatypus/hikari.git", rev = "feature/modals-v2" }
